--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Freainq : A Freak JavaScript ECMA6 Arrow function LINQ-like library(plus additional features)">
+    <meta name="description" content="jLinqX : Enchanced JavaScript LINQ-like library(plus additional features)">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Freainq</title>
+    <title>jLinqX</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/mhcgolds/jlinqx">View on GitHub</a>
 
-          <h1 id="project_title">Freainq</h1>
-          <h2 id="project_tagline">A Freak JavaScript ECMA6 Arrow function LINQ-like library(plus additional features)</h2>
+          <h1 id="project_title">jLinqX</h1>
+          <h2 id="project_tagline">Enchanced JavaScript LINQ-like library(plus additional features)</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/mhcgolds/jlinqx/zipball/master">Download this project as a .zip file</a>
@@ -342,7 +342,7 @@ jlinq(data).Skip(1).Take(1).ToArray()
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Freainq maintained by <a href="https://github.com/mhcgolds">mhcgolds</a></p>
+        <p class="copyright">jLinqX maintained by <a href="https://github.com/mhcgolds">mhcgolds</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
