Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -311,9 +311,10 @@ jlinq(data).Skip(1).Take(1).ToArray()
 
 <p>If there is jQuery in your project, jLinqX will automatically(no need to include any plugins) work with its selectors. Just use like, e.g.:</p>
 
-<p>$("any-selector").jlinq().Where()</p>
+<pre><code>$("any-selector").jlinq().Where()
 
-<p>$("any-selector").filter('').jlinq().Any()</p>
+$("any-selector").filter('').jlinq().Any()
+</code></pre>
 
 <h3>
 <a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h3>
